prefer immutable map
GitOrigin-RevId: 56abd3ab146e43e1f5c6d694d6cbe3ed217078ae